<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="choose">Выберите свой аватар</string>
    <string name="app_name">Pain Search</string>
    <string name="drawer_item_pain">Что болит?</string>
    <string name="drawer_item_home">Главная</string>
    <string name="drawer_item_woman">Женский</string>
    <string name="drawer_item_man">Мужской</string>
    <string name="drawer_item_free_analog">Аналоги лекарств</string>
    <string name="drawer_item_free_med_card">Медицинская Карта</string>
    <string name="off">Выход</string>
    <string name="annot">Пока здесь пусто. Сюда будет добавляться история ваших болезней</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="main">Главная</string>
    <string name="history">Здесь будет отражена история вашей болезни</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">Главная</string>
    <string name="questions">Ответьте на несколько вопросов:</string>
    <string name="manwoman">Выберете ваш пол:</string>
    <string name="lastPassword">Введите старый пароль</string>
    <string name="newPassword">Введите новый пароль</string>
    <string name="btnSave">Сохранить</string>

    <string name="name">Имя</string>
    <string name="namApp">Pain Search</string>
    <string name="signIn">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="info">В нашем приложении Вы сможете найти информацию о лекартсвах и их более дешевых аналогах, узнать возможные причины вашей боли, а также получить информацию о том, к какому врачу вы можете обратиться.</string>
    <string name="version">Версия 1.0</string>
    <string name="surname">Фамилия</string>
    <string name="toRegist">Зарегистрироваться</string>
    <string name="alreadyHave">Уже есть аккаунт</string>
    <string name="change">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="skip">пропустить</string>
    <string name="next">далее</string>
    <string name="deist">Действующее вещество:</string>
    <string name="drug">Лекарство:</string>
    <string name="title">Название</string>
    <string name="price">Загрузка...</string>
    <string name="analog">Аналог:</string>
    <string name="consultation">Необходима консультация специалиста</string>
    <string name="profile">Профиль</string>
    <string name="changeProfile">Изменить свои данные</string>
    <string name="historyCard">История болезни</string>
    <string name="seeLast">Посмотреть прошлые результаты теста</string>
    <string name="about">О приложении</string>
    <string name="connect">Связаться с нами</string>
    <string name="question">Вопрос</string>
    <string name="result">Результат</string>
    <string name="answer">Ответ</string>
    <string name="wel1">Онлайн врач</string>
    <string name="wel11">Находите решения своих проблем со здоровьем</string>
    <string name="wel2">Аналоги лекарств</string>
    <string name="wel22">Ищите более дешевые аналоги популярных лекарств</string>
    <string name="wel3">История болезни</string>
    <string name="wel33">сохраняйте ваши результаты в журнал и просматривайте их в любое время</string>
    <string name="search">Поиск...</string>
    <string name="where">Где у Вас болит?</string>
    <string name="head">Голова</string>
    <string name="thigs">Бёдра</string>
    <string name="Stomach">Живот</string>
    <string name="chest">Грудная клетка</string>
    <string name="arms">Руки</string>
    <string name="shank">Голени</string>
    <string name="neck">Шея</string>
    <string name="hands">Кисти</string>
    <string name="feet">Стопы</string>
    <string name="information">О приложении</string>
    <string name="con">Связаться с нами</string>
    <string name="soglashenie">Принимая пользовательское соглашение, вы подтверждаете свое ознакомление с ним. \n Главные пункты : \n 1.Вся информация, находящаяся в приложении, носит только информативный характер. \n 2.Информация предоставлена для личных некоммерческих целей. \n 3.Пользователь сам несет ответственность за свое здоровье.</string>


</resources>
