<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    tools:context="com.example.rrota.pain_s.Profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginBottom="25dp"
            android:background="@color/green">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/green"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnknownId" />



            <TextView
                android:id="@+id/edit_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/change"
                android:textColor="#fff"
                android:textSize="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_linear_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <EditText
                        android:id="@+id/input_name_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:backgroundTint="@color/black"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:textColor="@color/black_overlay" />


                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/save_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textSize="10sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/name_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/name"
                    android:textSize="15sp"
                    android:textColor="@color/black_overlay"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/name_lable"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="6"
                    android:textSize="20sp"
                    android:textColor="@color/black_overlay"
                    android:visibility="visible"/>

                <ImageButton
                    android:id="@+id/edit_name"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/edit" />

            </LinearLayout>


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/surname_linear_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <EditText
                        android:id="@+id/input_surname_prof"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:backgroundTint="@color/black"
                        android:hint="@string/surname"
                        android:inputType="textPersonName" />


                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/save_surname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textSize="10sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/surname_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black_overlay"
                    android:text="@string/surname"
                    android:textSize="15sp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/surname_lable"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="6"
                    android:textSize="20sp"
                    android:textColor="@color/black_overlay"
                    android:visibility="visible"></TextView>

                <ImageButton
                    android:id="@+id/edit_surname"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/edit" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</ScrollView>
