<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questions_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:text="@string/question"
                android:textAlignment="gravity"
                android:textColor="#000"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/result"
                android:textColor="#000"
                android:textSize="20dp" />


            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/shadow"
                android:checked="false"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/answer"
                android:textColor="#000"
                android:textSize="18sp"
                android:theme="@style/MyCheckBox" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/shadow"
                android:checked="false"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/answer"
                android:textColor="#000"
                android:textSize="18sp"
                android:theme="@style/MyCheckBox" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/shadow"
                android:checked="false"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/answer"
                android:textColor="#000"
                android:textSize="18sp"
                android:theme="@style/MyCheckBox" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/shadow"
                android:checked="false"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/answer"
                android:textColor="#000"
                android:textSize="18sp"
                android:theme="@style/MyCheckBox"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/shadow"
                android:checked="false"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/answer"
                android:textColor="#000"
                android:textSize="18sp"
                android:theme="@style/MyCheckBox" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/shadow"
                android:checked="false"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/answer"
                android:textColor="#000"
                android:textSize="18sp"
                android:theme="@style/MyCheckBox" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/shadow"
                android:checked="false"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/answer"
                android:textColor="#000"
                android:textSize="18sp"
                android:theme="@style/MyCheckBox" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/shadow"
                android:checked="false"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/answer"
                android:textColor="#000"
                android:textSize="18sp"
                android:theme="@style/MyCheckBox" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/shadow"
                android:checked="false"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:text="@string/answer"
                android:textColor="#000"
                android:textSize="18sp"
                android:theme="@style/MyCheckBox" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:layout_x="80dp"
                android:layout_y="417dp"
                android:background="#e01421"
                android:padding="12dp"
                android:text="@string/next"
                android:textAlignment="center"
                android:textColor="#fff" />


        </LinearLayout>

    </ScrollView>





</android.support.constraint.ConstraintLayout>

